--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_12.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_12.cshtml
@@ -10,15 +10,15 @@
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                Numeral 59.1 del artículo 59 del Reglamento 019-2015-MINAGRI.
+                Literal d) del numeral 17.1 del artículo 17 del RGFS
             </td>
             <td style="border: 1px solid #000;">
                 <div>
-                    Numeral 7 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 2 del RISMFFS
+                    Numeral 12 del Anexo 2 del Cuadro de Infracciones y Sanciones en Materia Forestal del RISMFFS.
                 </div>
                 <br />
                 <i>
-                    “No cumplir con notificar los nacimientos, muertes, fugas o cualquier situación que afecte a la población de fauna silvestre mantenida en el centro de cría en cautividad, dentro del plazo y conforme a las condiciones establecidas”
+                    “No tener libro de operaciones o no registrar la información endicho libro, de acuerdo a las disposiciones establecidas”
                 </i>
             </td>
             <td style="border: 1px solid #000;">
@@ -62,15 +62,12 @@
     {{/if}}
     <li>
         <span>
-            <div>
-                En el presente caso, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, ha quedado acreditado lo siguiente:
-            </div>
-            <div>
-                El/la administrada/o no ha informado el egreso de XX especímenes de Fauna Silvestre, los cuales corresponden a XX”.
-            </div>
-            <div>
-                Por lo que en el presente caso, se evidencia que el/la administrada/o no ha informado el egreso de  XX, como se observa del Balance de ingresos y egresos, donde no se advierte la situación de estas especies; se debe precisar que la administrada presentó toda documentación que acredita la posesión de distintas especies, así como toda documentación sobre los egresos de las mismas; sin embargo, en ninguno de estos documentos se advierte la situación de los mencionados especímenes, por lo que al evidenciarse que la administrada debe poseer estas especies y al advertir que estas no se encontraron al momento de la supervisión, se puede concluir que el/la administrada/o no ha informado sobre el egreso de las especies antes citadas.
-            </div>            
+            En el presente caso, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, ha quedado acreditado lo siguiente:
+            <br /><br />
+            El/la administrada/o no ha informado el egreso de XX especímenes de Fauna Silvestre, los cuales corresponden a XX”.
+            <br /><br />
+            Por lo que en el presente caso, se evidencia que el/la administrada/o no ha informado el egreso de  XX, como se observa del Balance de ingresos y egresos, donde no se advierte la situación de estas especies; se debe precisar que la administrada presentó toda documentación que acredita la posesión de distintas especies, así como toda documentación sobre los egresos de las mismas; sin embargo, en ninguno de estos documentos se advierte la situación de los mencionados especímenes, por lo que al evidenciarse que la administrada debe poseer estas especies y al advertir que estas no se encontraron al momento de la supervisión, se puede concluir que el/la administrada/o no ha informado sobre el egreso de las especies antes citadas.
+            <br /><br />
             <table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 9pt; border-collapse: collapse; line-height: 150%;">
                 <thead>
                     <tr style="background-color: #bfbfbf;">
@@ -136,20 +133,38 @@
 
 <ul style="list-style-type: disc; margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
-        De lo analizado, el/ la titular no alberga especímenes de fauna silvestre dentro del área que forma parte del título habilitante y no se cuenta con documentación que acredite que comunicó, en su momento a la ARFFS ni al OSINFOR, el egreso de un total de xxx especímenes que albergaba, entre ejemplares del plantel reproductor, nacimientos y entregados en custodia.
+        <span>
+            <div>
+                Mediante la <strong>Resolución de Dirección Ejecutiva N° D000198-2021-MIDAGRI-SERFOR-DE de fecha 19 de octubre de 2021</strong>, se aprueba los Formatos de Libro de Operaciones, denominados “Formato de Libro de Operaciones para áreas de manejo de fauna silvestre”, “Formato de Libro de Operaciones para centros de cría de fauna silvestre” y “Formato de Libro de operaciones para centros de transformación primaria, lugares de acopio, depósitos y centros de comercialización de productos, subproductos y especímenes de fauna silvestre”, los cuales según el artículo 2 de la mencionada resolución señala que:
+            </div>
+            <div>
+                <u><strong>“Desde la entrada en vigencia de la presente Resolución hasta el plazo de un año, opera un periodo de adecuación</strong></u> en el que los titulares de áreas de manejo de fauna silvestre, centros de cría de fauna silvestre, centros de transformación primaria, lugares de acopio, depósitos y centros de comercialización de productos, subproductos y especímenes de fauna silvestre, y las Autoridades Regionales Forestales y de Fauna Silvestre, reciben la capacitación y acompañamiento de parte del SERFOR para el uso e implementación de los Formatos de Libro de Operaciones aprobados en el artículo 1 de la presente Resolución, <u>los cuales resultan exigibles luego de culminado dicho proceso</u>”.
+            </div>
+        </span>
     </li>
     <li>
-        En ese sentido, del análisis de los resultados obtenidos en la supervisión, se advierte que, existen XX especímenes de las especies xxx, respecto de los cuales no se habría reportado el egreso, conforme se aprecia del siguiente cuadro:
+        <div>
+            <div>
+                Si bien es cierto se advierte que la utilización de estos formatos sería exigible luego del plazo de un año para su adecuación, se advierte que en el artículo 4 también señala que:
+            </div>
+            <div>
+                “En tanto dure el periodo de adecuación previsto en el artículo 2 de la presente Resolución, los titulares de áreas de manejo de fauna silvestre, centros de cría de fauna silvestre, centros de transformación primaria, lugares de acopio, depósitos y centros de comercialización de productos, subproductos y especímenes de fauna silvestre, <strong>tienen la obligación de acreditar la procedencia legal de los especímenes, productos y subproductos de fauna silvestre, con la documentación prevista en la legislación vigente, que puede complementarse con el uso de instrumentos manuales o informáticos para el registro de información.</strong> El uso de dichos instrumentos contribuye con la trazabilidad de los especímenes, productos y subproductos de fauna silvestre”.
+            </div>
+        </div>
+    </li>
+    <li>
+        Sin embargo, pese al requerimiento efectuado mediante la Carta N° 0XXX-XXX-OSINFOR/08.1 notificada con fecha XX, así como mediante Carta de Notificación Preventiva N° XX, de fecha XX, el/la titular no ha cumplido con presentar información equivalente al Libro de Operaciones (teniendo en cuenta que la diligencia de supervisión se efectuó con anterioridad al vencimiento del plazo de adecuación), a fin de acreditar el cumplimiento de la presente obligación.
     </li>
 </ul>
 
-<p style="text-align: center;">
-    <strong>Cuadro . (Resumen del Balance de ingresos y egresos de especímenes de fauna silvestre )</strong>
-</p>
-<div style="text-align: center;">Fuente: Informe de supervisión Informe de Supervisión</div>
-
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
-        En consecuencia, estando a la evaluación realizada a los actuados en el presente procedimiento, y siendo que el/la titular no presentó descargos que logren desacreditar los hechos que sustentan la imputación materia de análisis, ha quedado acreditada la comisión de la infracción tipificada en el numeral 7 del Anexo 2 del Cuadro de Infracciones y Sanciones en Materia de Fauna Silvestre del RISMFFS.
+        Adicionalmente, de la búsqueda realizada en el Sistema de Trámite Documentario - SITD del OSINFOR, <strong>se advierte que, el/la titular no ha presentado el Libro de Operaciones actualizado</strong>, hasta la fecha de emisión del presente Informe.
+    </li>
+    <li>
+        En ese sentido, <u><strong>se concluye que, el administrado no cuenta con el Libro de operaciones.</strong></u>
+    </li>
+    <li>
+        En consecuencia, estando a la evaluación realizada a los actuados en el presente procedimiento, y siendo que el/la titular no presentó descargos que logren desacreditar los hechos que sustentan la imputación materia de análisis, ha quedado acreditada la comisión de la infracción tipificada en el numeral 12 del Anexo 2 del Cuadro de Infracciones y Sanciones en Materia de Fauna Silvestre del RISMFFS.
     </li>
 </ol>
