--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_2.cshtml
@@ -10,7 +10,7 @@
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                Literal b) del numeral 43.1 del artículo 43, concordado con el artículo 66 del RGF.
+                Literal b) del numeral 17.1 del artículo 17 del Reglamento para la Gestión de Fauna Silvestre (en adelante, RGFS), aprobado por Decreto Supremo N° 019-2015-MINAGRI, concordado con el artículo 53 del citado reglamento
             </td>
             <td style="border: 1px solid #000;">
                 <div>Numeral 2 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS</div><br />
@@ -140,7 +140,7 @@
         Conforme el artículo 66 del RGF los informes de ejecución se clasifican en: <strong>a)</strong> informe de ejecución anual (se presentan al final de año operativo en base al plan de manejo aprobado); y <strong>b)</strong> informe de ejecución final (se presenta al finalizar la vigencia del plan de manejo). <strong>El plazo para presentar el informe de ejecución a la ARFFS y al OSINFOR, es dentro de los 45 días culminado el año operativo</strong>, es decir, la Titular debió presentar el informe de ejecución conforme al siguiente cuadro:
     </li>
     <li>
-        La Titular <strong><u>no ha cumplido con presentar el Informe de Ejecución del XX, correspondiente al primer periodo anual 20XX-20XX, el cual debe contener las actividades de aprovechamiento de productos forestales maderables y no maderables</u></strong>, incluso habiéndose realizado la consulta en el Sistema de Trámite Documentario- SITD del OSINFOR, a la fecha de emisión del presente informe no han sido presentados, dicho incumplimiento se detalla en el siguiente cuadro.
+        El/La Titular <strong><u>no ha cumplido con presentar el Informe de Ejecución del XX, correspondiente al primer periodo anual 20XX-20XX, el cual debe contener las actividades de aprovechamiento de productos forestales maderables y no maderables</u></strong>, incluso habiéndose realizado la consulta en el Sistema de Trámite Documentario- SITD del OSINFOR, a la fecha de emisión del presente informe no han sido presentados, dicho incumplimiento se detalla en el siguiente cuadro.
     </li>
 </ol>
 
