--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_24.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_24.cshtml
@@ -10,15 +10,15 @@
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                Numeral 59.1 del artículo 59 del Reglamento 019-2015-MINAGRI.
+                Literal x) del numeral 17.1 del artículo 17 del RGFS
             </td>
             <td style="border: 1px solid #000;">
                 <div>
-                    Numeral 7 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 2 del RISMFFS
+                    Numeral “24” del Anexo 2 del Cuadro de Infracciones y Sanciones en Materia Forestal del RISMFFS.
                 </div>
                 <br />
                 <i>
-                    “No cumplir con notificar los nacimientos, muertes, fugas o cualquier situación que afecte a la población de fauna silvestre mantenida en el centro de cría en cautividad, dentro del plazo y conforme a las condiciones establecidas”
+                    “Transportar especímenes, productos o sub productos de fauna silvestre, sin portar los documentos que amparen su movilización”.
                 </i>
             </td>
             <td style="border: 1px solid #000;">
@@ -62,15 +62,12 @@
     {{/if}}
     <li>
         <span>
-            <div>
-                En el presente caso, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, ha quedado acreditado lo siguiente:
-            </div>
-            <div>
-                El/la administrada/o no ha informado el egreso de XX especímenes de Fauna Silvestre, los cuales corresponden a XX”.
-            </div>
-            <div>
-                Por lo que en el presente caso, se evidencia que el/la administrada/o no ha informado el egreso de  XX, como se observa del Balance de ingresos y egresos, donde no se advierte la situación de estas especies; se debe precisar que la administrada presentó toda documentación que acredita la posesión de distintas especies, así como toda documentación sobre los egresos de las mismas; sin embargo, en ninguno de estos documentos se advierte la situación de los mencionados especímenes, por lo que al evidenciarse que la administrada debe poseer estas especies y al advertir que estas no se encontraron al momento de la supervisión, se puede concluir que el/la administrada/o no ha informado sobre el egreso de las especies antes citadas.
-            </div>            
+            En el presente caso, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, ha quedado acreditado lo siguiente:
+            <br /><br />
+            El/la administrada/o no ha informado el egreso de XX especímenes de Fauna Silvestre, los cuales corresponden a XX”.
+            <br /><br />
+            Por lo que en el presente caso, se evidencia que el/la administrada/o no ha informado el egreso de  XX, como se observa del Balance de ingresos y egresos, donde no se advierte la situación de estas especies; se debe precisar que la administrada presentó toda documentación que acredita la posesión de distintas especies, así como toda documentación sobre los egresos de las mismas; sin embargo, en ninguno de estos documentos se advierte la situación de los mencionados especímenes, por lo que al evidenciarse que la administrada debe poseer estas especies y al advertir que estas no se encontraron al momento de la supervisión, se puede concluir que el/la administrada/o no ha informado sobre el egreso de las especies antes citadas.
+            <br /><br />
             <table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 9pt; border-collapse: collapse; line-height: 150%;">
                 <thead>
                     <tr style="background-color: #bfbfbf;">
@@ -136,20 +133,35 @@
 
 <ul style="list-style-type: disc; margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
-        De lo analizado, el/ la titular no alberga especímenes de fauna silvestre dentro del área que forma parte del título habilitante y no se cuenta con documentación que acredite que comunicó, en su momento a la ARFFS ni al OSINFOR, el egreso de un total de xxx especímenes que albergaba, entre ejemplares del plantel reproductor, nacimientos y entregados en custodia.
+        <span>
+            <div>
+                xxx, conforme a las siguientes imágenes:
+            </div>
+            <div style="text-align: center; font-size: 7pt;">
+                Fuente: Registro Fotográfico del Informe de Supervisión
+            </div>
+        </span>
     </li>
     <li>
-        En ese sentido, del análisis de los resultados obtenidos en la supervisión, se advierte que, existen XX especímenes de las especies xxx, respecto de los cuales no se habría reportado el egreso, conforme se aprecia del siguiente cuadro:
+        <span>
+            <div>
+                xxx, conforme a las siguientes imágenes:
+            </div>
+            <div style="text-align: center; font-size: 7pt;">
+                Fuente: Registro Fotográfico del Informe de Supervisión
+            </div>
+        </span>
+    </li>
+    <li>
+        Sobre el particular, tal como se ha señalado previamente, el/la titular ha realizado el traslado del zoocriadero sin obtener la autorización para el traslado, conforme a lo dispuesto en el citado numeral 7.7 de los “Lineamientos para el otorgamiento de la autorización del proyecto y autorización de funcionamiento del centro de cría en cautividad”.
+    </li>
+    <li>
+        Dentro de ese contexto, y considerando que no obra en el expediente administrativo documentación que ampare la movilización de especímenes de fauna silvestre, la/el titula ha transportado sin autorización los xxx especímenes de fauna silvestre, de acuerdo al siguiente detalle:xxx, toda vez que el zoocriadero fue encontrado inoperativo por la supervisora de fauna silvestre e incluso se encontraría operando en otro lugar.
     </li>
 </ul>
 
-<p style="text-align: center;">
-    <strong>Cuadro . (Resumen del Balance de ingresos y egresos de especímenes de fauna silvestre )</strong>
-</p>
-<div style="text-align: center;">Fuente: Informe de supervisión Informe de Supervisión</div>
-
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
-        En consecuencia, estando a la evaluación realizada a los actuados en el presente procedimiento, y siendo que el/la titular no presentó descargos que logren desacreditar los hechos que sustentan la imputación materia de análisis, ha quedado acreditada la comisión de la infracción tipificada en el numeral 7 del Anexo 2 del Cuadro de Infracciones y Sanciones en Materia de Fauna Silvestre del RISMFFS.
+        En consecuencia, estando a la evaluación realizada a los actuados en el presente procedimiento, y siendo que el/la titular no presentó descargos que logren desacreditar los hechos que sustentan la imputación materia de análisis, ha quedado acreditada la comisión de la infracción tipificada en el numeral 24 del Anexo 2 del Cuadro de Infracciones y Sanciones en Materia de Fauna Silvestre del RISMFFS.
     </li>
 </ol>
