--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_29.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_29.cshtml
@@ -5,13 +5,12 @@
             <th style="text-align: center; border: 1px solid #000;">Tipo infractor</th>
             <th style="text-align: center; border: 1px solid #000;">Conducta Imputada</th>
             <th style="text-align: center; border: 1px solid #000;">Descargo sobre la imputación formulada</th>
-            <th style="text-align: center; border: 1px solid #000;">Información complementaria/información adicional</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                Dependerá del caso concreto
+                Literal m) del numeral 43.1 del artículo 43 del RGF.
             </td>
             <td style="border: 1px solid #000;">
                 Numeral 29 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS
@@ -19,19 +18,17 @@
                 <i>"No contar con un regente para la implementación del plan de manejo, en caso corresponda"</i>
             </td>
             <td style="border: 1px solid #000;">
-                Contar con el regente forestal, para la implementación del plan de manejo, y comunicar a la ARFFS y al SERFOR la designación o el cambio del mismo.
+                Se imputó contra el/la Titular ${infraccion.detalle || 'XX'}
             </td>
-            <td style="border: 1px solid #000;">
-                Dependerá del caso concreto
-            </td>
-            <td style="border: 1px solid #000;">
-                Dependerá del caso concreto
+            <td style="border: 1px solid #000; text-align: center;">
+                ${informe.COD_TIPO_INFORME?'Si':'No'}
             </td>
         </tr>
     </tbody>
 </table>
 <div>Fuente: Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || '00XX-202X-OSINFOR/08.2.X'}</div>
 
+{{if infraccion.flgDesvirtua}}
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
         Mediante la Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, de fecha ${informe.ANTECEDENTES_DOCS.RSD.fechaEmisionTexto ||'XX de XXXX'}, se imputó al/la concesionario/a presuntamente no contar con regente forestal para la implementación del plan de manejo forestal.
@@ -39,7 +36,7 @@
     {{if informe.COD_TIPO_INFORME == 1}}
     <li>
         <span>
-            Por Escrito/Carta de fecha ${informe.ANTECEDENTES_DOCS.Escrito.fechaEmisionTexto ||'XX de XXXX'} ingresado al OSINFOR con Registro N° ${informe.ANTECEDENTES_DOCS.Escrito.numero || '00XX-202X-OSINFOR/08.2.X'}, e/la concesionario/a presentó sus descargos, donde se advierte los siguientes argumentos que guarda relación con la imputación materia de análisis:<br />
+            Por Escrito/Carta de fecha ${informe.ANTECEDENTES_DOCS.Escrito.fechaEmisionTexto || informe.ANTECEDENTES_DOCS.Carta.fechaEmisionTexto ||'XX de XXXX'} ingresado al OSINFOR con Registro N° ${informe.ANTECEDENTES_DOCS.Escrito.numero || informe.ANTECEDENTES_DOCS.Carta.numero || '00XX-202X-OSINFOR/08.2.X'}, e/la concesionario/a presentó sus descargos, donde se advierte los siguientes argumentos que guarda relación con la imputación materia de análisis:<br />
             <ol style="list-style-type: lower-alpha">
                 <li>(Agregar texto original).</li>
                 <li>(Agregar texto original).</li>
@@ -69,7 +66,7 @@
             En el presente caso, de acuerdo a la documentación que obra en el expediente administrativo, ha quedado acreditado lo siguiente:<br />
             <ul>
                 <li>
-                    Mediante Carta N° XXXXX-XXXX-OSINFOR/08.1, de fecha XX de XXXX de XXXX, notificada el XX de XXXX de XXXX, la DSFFS solicitó al/la concesionario/a el contrato de regencia en el marco de la implementación del plan de manejo forestal, no habiendo remitido hasta la fecha.
+                    Mediante Carta N° ${informe.ANTECEDENTES_DOCS.Carta.numero || 'XXXXX-XXXX-OSINFOR/08.1'}, de fecha ${informe.ANTECEDENTES_DOCS.Carta.fechaEmisionTexto || 'XX de XXXX de XXXX'}, notificada el ${informe.ANTECEDENTES_DOCS.Carta.fechaNotificacionTexto || 'XX de XXXX de XXXX'}, la DSFFS solicitó al/la concesionario/a el contrato de regencia en el marco de la implementación del plan de manejo forestal, no habiendo remitido hasta la fecha.
                 </li>
                 <li>
                     Ahora bien, es preciso indicar que el plan de manejo forestal tiene vigencia para el aprovechamiento de productos maderables hasta el XX de XXXX de XXXX, y que, además, de la revisión de la Forma 20, de fecha XX de XXXXX de XXXX, se advierte que la última movilización se realizó el XX de XXXXXX. En consecuencia, el/la concesionario/a debió contar con regente forestal para la implementación del citado plan de manejo forestal.
@@ -84,6 +81,7 @@
         Por ello, estando a la evaluación realizada a los actuados en el presente procedimiento, y siendo que el/la concesionario/a no presentó argumentos de defensa suficientes que logren desacreditar los hechos que sustentan la imputación materia de análisis, ha quedado acreditada la comisión de la infracción tipificada en el numeral 29 del Cuadro de Infracciones en Materia Forestal del Anexo 1 del RISMFFS.
     </li>
 </ol>
+{{/if}}
 
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
@@ -100,7 +98,7 @@
 
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
-        El PM aprobado mediante la Resolución XX, tiene vigencia hasta XX. Asimismo, de la revisión de la Forma 20, se advierte que la última movilización se realizó el 2XX.
+        El PM aprobado mediante la Resolución ${informe.ANUM_RESOLUCION || 'XX'}, tiene vigencia hasta XX. Asimismo, de la revisión de la Forma 20, se advierte que la última movilización se realizó el 2XX.
     </li>
     <li>
         En el presente caso, la administrada implementó el Plan de Manejo Forestal Intermedio Reformulado (PMFI – PO 02), sin embargo, no habría contado con regente forestal, conforme se observa en el siguiente gráfico:
