--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_14.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_14.cshtml
@@ -10,15 +10,15 @@
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                Numeral 59.1 del artículo 59 del Reglamento 019-2015-MINAGRI.
+                Literal z) del numeral 17.1 del artículo 17 del RGFS
             </td>
             <td style="border: 1px solid #000;">
                 <div>
-                    Numeral 7 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 2 del RISMFFS
+                    Numeral “14” del Anexo 2 del Cuadro de Infracciones y Sanciones en Materia Forestal del RISMFFS
                 </div>
                 <br />
                 <i>
-                    “No cumplir con notificar los nacimientos, muertes, fugas o cualquier situación que afecte a la población de fauna silvestre mantenida en el centro de cría en cautividad, dentro del plazo y conforme a las condiciones establecidas”
+                    “Incumplir con la implementación de las medidas correctivas y/o provisorias y/o mandatos dispuestos por la autoridad competente”
                 </i>
             </td>
             <td style="border: 1px solid #000;">
@@ -62,15 +62,12 @@
     {{/if}}
     <li>
         <span>
-            <div>
-                En el presente caso, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, ha quedado acreditado lo siguiente:
-            </div>
-            <div>
-                El/la administrada/o no ha informado el egreso de XX especímenes de Fauna Silvestre, los cuales corresponden a XX”.
-            </div>
-            <div>
-                Por lo que en el presente caso, se evidencia que el/la administrada/o no ha informado el egreso de  XX, como se observa del Balance de ingresos y egresos, donde no se advierte la situación de estas especies; se debe precisar que la administrada presentó toda documentación que acredita la posesión de distintas especies, así como toda documentación sobre los egresos de las mismas; sin embargo, en ninguno de estos documentos se advierte la situación de los mencionados especímenes, por lo que al evidenciarse que la administrada debe poseer estas especies y al advertir que estas no se encontraron al momento de la supervisión, se puede concluir que el/la administrada/o no ha informado sobre el egreso de las especies antes citadas.
-            </div>            
+            En el presente caso, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, ha quedado acreditado lo siguiente:
+            <br /><br />
+            El/la administrada/o no ha informado el egreso de XX especímenes de Fauna Silvestre, los cuales corresponden a XX”.
+            <br /><br />
+            Por lo que en el presente caso, se evidencia que el/la administrada/o no ha informado el egreso de  XX, como se observa del Balance de ingresos y egresos, donde no se advierte la situación de estas especies; se debe precisar que la administrada presentó toda documentación que acredita la posesión de distintas especies, así como toda documentación sobre los egresos de las mismas; sin embargo, en ninguno de estos documentos se advierte la situación de los mencionados especímenes, por lo que al evidenciarse que la administrada debe poseer estas especies y al advertir que estas no se encontraron al momento de la supervisión, se puede concluir que el/la administrada/o no ha informado sobre el egreso de las especies antes citadas.
+            <br /><br />
             <table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 9pt; border-collapse: collapse; line-height: 150%;">
                 <thead>
                     <tr style="background-color: #bfbfbf;">
@@ -136,20 +133,89 @@
 
 <ul style="list-style-type: disc; margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
-        De lo analizado, el/ la titular no alberga especímenes de fauna silvestre dentro del área que forma parte del título habilitante y no se cuenta con documentación que acredite que comunicó, en su momento a la ARFFS ni al OSINFOR, el egreso de un total de xxx especímenes que albergaba, entre ejemplares del plantel reproductor, nacimientos y entregados en custodia.
+        <span>
+            <div>
+                Mediante el Proveído de Archivo de Informe de Supervisión N° xxx-20xx-OSINFOR/08.2.2, se dictaron al titular  xx mandatos relacionados al manejo de fauna silvestre, conforme al siguiente detalle:
+            </div>
+            <ul>
+                <li><strong>Mandato N° 01:</strong> “xx</li>
+                <li><strong>Mandato N° 02:</strong> “xx</li>
+            </ul>
+        </span>
     </li>
     <li>
-        En ese sentido, del análisis de los resultados obtenidos en la supervisión, se advierte que, existen XX especímenes de las especies xxx, respecto de los cuales no se habría reportado el egreso, conforme se aprecia del siguiente cuadro:
+        Posteriormente, mediante la Carta N° xx-xxx-OSINFOR/08.2.2, notificada con fecha xx de xx de xxx, se remitió al titular, el Proveído de Archivo de Informe de Supervisión N° xxx-20xx-OSINFOR/08.2.2, el Informe de Supervisión N° 00xx-20xx-OSINFOR/08.1.2, a fin de que pudiera dar cumplimiento a los xx mandatos detallados anteriormente.
+    </li>
+    <li>
+        <span>
+            Al respecto, en el numeral xx (Del Cumplimiento de mandatos y medidas correctivas) del Informe de Supervisión N° 00xx-20xx-OSINFOR/08.1.2, del xx de xxx de 20xx la DSFFS señala lo siguiente:
+
+            <ul>
+                <li>
+                    “(…) xx”.
+                </li>
+            </ul>
+        </span>
+    </li>
+    <li>
+        Al respecto, mediante la Notificación Preventiva N° xx-A-20xx-OSINFOR/08.1 se otorgó el plazo de cinco (05) días hábiles para que el/la titular cumpla con presentar el informe de implementación de los mandatos, no obstante, hasta la fecha no se ha cumplido con la mencionada obligación.
+    </li>
+    <li>
+        Cabe precisar que, si bien mediante el Proveído de Archivo de Informe de Supervisión N° 0xx-20xx-OSINFOR/08.2.2 no se determinó un plazo para informar el cumplimiento de los mandatos, se otorgó un plazo para su implementación de xx mes, respectivamente, cumplimiento que debía informar tanto a la ARFFS como al OSINFOR; conforme al siguiente plazo:
     </li>
 </ul>
 
 <p style="text-align: center;">
-    <strong>Cuadro . (Resumen del Balance de ingresos y egresos de especímenes de fauna silvestre )</strong>
+    <strong>Plazo para la Implementación del Mandato N° 01</strong>
 </p>
-<div style="text-align: center;">Fuente: Informe de supervisión Informe de Supervisión</div>
+
+<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+    <thead>
+        <tr style="background-color: #bfbfbf;">
+            <th style="text-align: center; border: 1px solid #000;">Notificación del Proveído N° de Archivo de Informe de Supervisión N° 0xx-20xx-OSINFOR/08.2.2</th>
+            <th style="text-align: center; border: 1px solid #000;">Vcto. Plazo para implementar  (hasta xx meses a partir de su notificación)</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="border: 1px solid #000;">
+                xx
+            </td>
+            <td style="border: 1px solid #000;">
+                xx
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<p style="text-align: center;">
+    <strong>Plazo para la Implementación del Mandato N° 02</strong>
+</p>
+
+<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+    <thead>
+        <tr style="background-color: #bfbfbf;">
+            <th style="text-align: center; border: 1px solid #000;">Notificación del Proveído N° de Archivo de Informe de Supervisión N° 0xx-20xx-OSINFOR/08.2.2</th>
+            <th style="text-align: center; border: 1px solid #000;">Vcto. Plazo para implementar  (hasta xx meses a partir de su notificación)</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="border: 1px solid #000;">
+                xx
+            </td>
+            <td style="border: 1px solid #000;">
+                xx
+            </td>
+        </tr>
+    </tbody>
+</table>
 
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
-        En consecuencia, estando a la evaluación realizada a los actuados en el presente procedimiento, y siendo que el/la titular no presentó descargos que logren desacreditar los hechos que sustentan la imputación materia de análisis, ha quedado acreditada la comisión de la infracción tipificada en el numeral 7 del Anexo 2 del Cuadro de Infracciones y Sanciones en Materia de Fauna Silvestre del RISMFFS.
+        Sin embargo, a la fecha de emisión del presente informe, el/la titular no ha cumplido con remitir información que acredite el cumplimiento de los mandatos N° 01 y 02, siendo incluso que la supervisora de fauna silvestre verificó in situ que no fueron implementados.
+    </li>
+    <li>
+        En consecuencia, estando a la evaluación realizada a los actuados en el presente procedimiento, y siendo que el/la titular no presentó descargos que logren desacreditar los hechos que sustentan la imputación materia de análisis, ha quedado acreditada la comisión de la infracción tipificada en el numeral 14 del Anexo 2 del Cuadro de Infracciones y Sanciones en Materia de Fauna Silvestre del RISMFFS.
     </li>
 </ol>
